fixed scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -141,7 +141,7 @@ a {
 
 /* width */
 ::-webkit-scrollbar {
-	width: 5px;
+	width: 8px;
 }
 
 /* Track */
